Fix color contrast.

--- a/wp-content/themes/culu/sass/layout/_homepage.scss
+++ b/wp-content/themes/culu/sass/layout/_homepage.scss
@@ -575,6 +575,10 @@ header.branding {
         text-decoration: underline;
       }
 
+      &:focus {
+        outline: 1px dotted #fff;
+      }
+
     }
 
   }
